language/move-lang/tests/move_check/parser/invalid_call_lhs_value.move
module M {
    fun foo() {
        5();
        5(0, 1);
    }
}
